--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "pro",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://https://juraantoniv.github.io/pro/",
+  "homepage": "https://juraantoniv.github.io/pro/",
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
     "@fontsource/roboto": "^4.5.8",
-    "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.9",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.2",
     "@mui/styled-engine-sc": "^5.10.6",
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
